@@ -34,6 +34,9 @@ MComix 0.90.4
     - MComix could not switch back to windowed mode when started in fullscreen
       mode on Win32.
 
+    - Fixed the settings dialog window no longer opening when it has been
+      closed with the X icon on the dialog before.
+
     - Required Python version is now 2.5 or newer.
 
     - Updated Swedish translation. (by Martin Karlsson)
